@@ -10,6 +10,7 @@ Revision history for Test::Apocalypse
 	Ripped out the dysfunctional Test::NoWarnings in favor of Test::FailWarnings, thanks DAGOLDEN!
 	Ignore the 'perl' dependency when checking deps
 	Fix version mismatch error when checking dependencies ( 'v0.0.6' vs '0.0.6' )
+	Thanks everyone who sent RT tickets to clean up the FAILs :)
 
 1.002	2011-04-21 21:49:46 UTC
 
